@@ -176,6 +176,8 @@ var localized_strings,
 			view_badge_foil: "View Foil Badge",
 			badge_not_unlocked: "Not unlocked",
 			badge_completion_cost: "Cost of completing badge",
+			badge_completion_avg: "Avg cost of completion",
+			drops_worth_avg: "Worth Approximately",
 			cards_owned: "__owned__ of __possible__ cards owned",
 			badges_all: "All Badges",
 			games_all: "All Games",
